# phenocube-py

./: LICENSE  README.rst  pyproject.toml  setup.py  tox.ini
docs/: conf.py
docs/_build/doctrees/: environment.pickle  index.doctree
docs/_build/html/: .buildinfo  genindex.html  index.html  objects.inv  search.html  searchindex.js
docs/_build/html/_sources/: index.rst.txt
docs/source/: conf.py
phenocube/: __init__.py  dask.py  extract.py  plot.py  pyvenv.cfg  spectralindices.py  utils.py
phenocube.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
phenocube/.ipynb_checkpoints/: extract-checkpoint.py  utils-checkpoint.py
